--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,20 @@
 environment:
     global:
         PROJECT_NAME: rust-clippy
+    channel: nightly
     matrix:
-        #- TARGET: i686-pc-windows-gnu
-        #- TARGET: i686-pc-windows-msvc
-        #- TARGET: x86_64-pc-windows-gnu
-        - TARGET: x86_64-pc-windows-msvc
+     - target: x86_64-pc-windows-msvc
+       host: x86_64-pc-windows-msvc
+     - target: aarch64-pc-windows-msvc
+       host: x86_64-pc-windows-msvc
+    # - target: i686-pc-windows-msvc
+    #   host: i686-pc-windows-msvc
+    # - target: x86_64-pc-windows-gnu
+    #   host: x86_64-pc-windows-gnu
+    # - target: i686-pc-windows-gnu
+    #   host: i686-pc-windows-gnu
+    # - target: x86_64-pc-windows-gnu
+    #   host: x86_64-pc-windows-gnu
 
 branches:
     # Don't build these branches
@@ -16,7 +25,8 @@ branches:
 
 install:
     - curl -sSf -o rustup-init.exe https://win.rustup.rs/
-    - rustup-init.exe -y --default-host %TARGET% --default-toolchain nightly
+    - rustup-init.exe -y --default-host %host% --default-toolchain %channel%
+    - if NOT %host% == %target% rustup target add %target%
     - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin
     - git ls-remote https://github.com/rust-lang/rust.git master | awk '{print $1}' >rustc-hash.txt
     - set /p RUSTC_HASH=<rustc-hash.txt
@@ -32,8 +42,8 @@ build: false
 
 test_script:
     - set RUST_BACKTRACE=1
-    - cargo build --features debugging
-    - cargo test --features debugging
+    - cargo build --features debugging --target=%target%
+    - cargo test --features debugging --target=%target%
 
 notifications:
     - provider: Email
